# reATRM

./: .gitignore  .gitmodules  Dockerfile  README.MD  docker-compose.yaml
.devcontainer/: Dockerfile  devcontainer.json
.script/: atrm-service  entrypoint  envinit.bash  format-all  wsbuild  wsclean
src/bringup/: CMakeLists.txt  package.xml
src/bringup/config/: dual-sentry.yaml  node_params.yaml  testing-infantry.yaml
src/bringup/launch/: bringup_launch.py  rmcs.launch.py  sim_launch.py
src/core/communication/: CMakeLists.txt  README.md  package.xml
src/core/communication/include/rm_serial_driver/: crc.hpp  packet.hpp  rm_serial_driver.hpp
src/core/communication/src/: crc.cpp  rm_serial_driver.cpp
src/core/description/: CMakeLists.txt  dependencies.repos  package.xml
src/core/description/launch/: robot_description_launch.py
src/core/description/params/: robot_description.yaml
src/core/description/resource/xmacro/: iron2025_sen_ul.sdf.xmacro  iron2026_sen_ul.sdf.xmacro  simulation_robot.sdf.xmacro
src/core/drivers/hik_camera_ros2_driver/config/: camera_params.yaml
src/core/drivers/hik_camera_ros2_driver/src/: hik_camera_node.cpp
src/core/drivers/hikcamera/include/hikcamera/: image_capturer.hpp
src/core/drivers/hikcamera/src/: image_capturer.cpp
src/core/drivers/hikcamera/src/sdk/include/: CameraParams.h  MvCameraControl.h  MvErrorDefine.h  MvISPErrorDefine.h  MvObsoleteInterfaces.h  MvSdkExport.h  ObsoleteCamParams.h  PixelType.h
src/core/drivers/serial/: CMakeLists.txt
src/core/drivers/serial/include/serial/: serial.h  v8stdint.h
src/core/drivers/serial/include/serial/impl/: unix.h  win.h
src/core/drivers/serial/src/: serial.cc
src/core/drivers/serial/src/impl/: unix.cc  win.cc
src/core/drivers/serial/src/impl/list_ports/: list_ports_linux.cc  list_ports_osx.cc  list_ports_win.cc
src/core/utils/armor_detector/src/: detector_node.cpp
src/core/utils/armor_tracker/: CMakeLists.txt
src/core/utils/armor_tracker/src/: tracker_node.cpp
src/core/utils/auto_aim/armor_detector/: CMakeLists.txt
src/core/utils/auto_aim/armor_detector/include/armor_detector/: armor.hpp  detector.hpp  detector_node.hpp  number_classifier.hpp  pnp_solver.hpp
src/core/utils/auto_aim/armor_detector/src/: detector.cpp  detector_node.cpp  number_classifier.cpp  pnp_solver.cpp
src/core/utils/auto_aim/armor_detector/test/: test_node_startup.cpp
src/core/utils/auto_aim/armor_tracker/include/armor_tracker/: extended_kalman_filter.hpp  tracker.hpp  tracker_node.hpp
src/core/utils/auto_aim/armor_tracker/src/: extended_kalman_filter.cpp  tracker.cpp  tracker_node.cpp
src/core/utils/auto_aim/rmoss_projectile_motion/: package.xml
src/core/utils/auto_aim/rmoss_projectile_motion/launch/: launch.py
src/core/utils/auto_aim/rmoss_projectile_motion/src/: gaf_projectile_solver.cpp  gimbal_transform_tool.cpp  gravity_projectile_solver.cpp  iterative_projectile_tool.cpp  projectile_solver_node.cpp
src/core/utils/miyformer/: package.xml  setup.cfg  setup.py
src/core/utils/miyformer/launch/: miyformer_launch.py
src/core/utils/miyformer/miyformer/: __init__.py  miyformer_node.py
src/core/utils/miyformer/resource/: miyformer
src/core/utils/rmoss_projectile_motion/: CMakeLists.txt  package.xml
src/core/utils/rmoss_projectile_motion/include/rmoss_projectile_motion/: projectile_solver_node.hpp
src/core/utils/rmoss_projectile_motion/src/: projectile_solver_node.cpp
src/core/utils/system_ctrl/fast_tf/: CMakeLists.txt
src/core/utils/system_ctrl/rmcs_core/: CMakeLists.txt  plugins.xml
src/core/utils/system_ctrl/rmcs_core/librmcs/: .clang-format  CMakeLists.txt  README.md
src/core/utils/system_ctrl/rmcs_core/librmcs/cmake/: librmcsConfig.cmake.in
src/core/utils/system_ctrl/rmcs_core/librmcs/example/: CMakeLists.txt
src/core/utils/system_ctrl/rmcs_core/librmcs/example/1.receive_imu_data/: main.cpp
src/core/utils/system_ctrl/rmcs_core/librmcs/example/2.receive_motor_data/: main.cpp
src/core/utils/system_ctrl/rmcs_core/librmcs/example/3.closed_loop_motor_velocity/: main.cpp
src/core/utils/system_ctrl/rmcs_core/librmcs/example/4.use_encapsulated_motor_class/: main.cpp
src/core/utils/system_ctrl/rmcs_core/librmcs/example/5.custom_reduction_ratio/: main.cpp
src/core/utils/system_ctrl/rmcs_core/librmcs/example/6.use_encapsulated_pid_class/: main.cpp
src/core/utils/system_ctrl/rmcs_core/librmcs/example/7.multithreading/: main.cpp
src/core/utils/system_ctrl/rmcs_core/librmcs/example/8.multithreading_advanced/: main.cpp
src/core/utils/system_ctrl/rmcs_core/librmcs/example/9.remote_control/: main.cpp
src/core/utils/system_ctrl/rmcs_core/librmcs/librmcs/client/: cboard.hpp
src/core/utils/system_ctrl/rmcs_core/librmcs/librmcs/device/: bmi088.hpp  dji_motor.hpp  dr16.hpp  lk_motor.hpp
src/core/utils/system_ctrl/rmcs_core/librmcs/librmcs/utility/: cross_os.hpp  ekf_imu.hpp  endian_promise.hpp  pid_calculator.hpp
src/core/utils/system_ctrl/rmcs_utility/: CMakeLists.txt
src/interface/auto_aim_interfaces/: CMakeLists.txt
src/interface/auto_aim_interfaces/msg/: Target.msg
src/interface/interface/: CMakeLists.txt  package.xml
src/interface/interface/msg/: CmdGimbal.msg  SupercapInfo.msg
src/interface/rm_decision_interfaces/: publish_script.sh
src/interface/rm_decision_interfaces/msg/: GameStatus.msg  RobotControl.msg
src/interface/rmcs_msgs/: CMakeLists.txt
src/sim/rmoss_gz_resources/resource/models/rm25_example_robot/: rm25_example_robot.def.xmacro
src/sim/rmoss_gz_resources/resource/models/rmua19_standard_robot/: chassis_wheel.def.xmacro
src/tasks/auto_aim/auto_aim_bringup/: package.xml
src/tasks/auto_aim/auto_aim_bringup/config/: camera_info.yaml  launch_params.yaml  node_params.yaml
src/tasks/auto_aim/auto_aim_bringup/launch/: common.py  no_hardware.launch.py  vision_bringup.launch.py
src/tasks/system_ctrl/rmcs_executor/: CMakeLists.txt
src/tasks/system_ctrl/rmcs_executor/include/rmcs_executor/: component.hpp
src/tasks/system_ctrl/rmcs_executor/src/: executor.hpp
(+30 files in other folders)
