<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>atrm_bringup</name>
  <version>0.0.0</version>
  <description>Main Bringup Of ATRM</description>
  <maintainer email="mide233@outlook.com">MIDE</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rm_serial_driver</depend>
  <depend>pb2025_robot_description</depend>
  
  <depend>pb2025_nav_bringup</depend>
  <depend>rm_vision_bringup</depend>

  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
